Base Brickme to pattern adapter
